fix dark mode in settings page

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -40,7 +40,7 @@
 		--muted-foreground: 217 5% 65%;
 		--accent: 179 30% 25%;
 		--accent-foreground: 217 5% 95%;
-		--destructive: 0 100% 50%;
+		--destructive: 0 100% 80%;
 		--destructive-foreground: 217 5% 100%;
 		--border: 217 30% 50%;
 		--input: 217 30% 50%;
